# pyautoenv

./: .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  PyAutoEnv.ps1  README.md  auto-pyenv.plugin.zsh  autopyenv.py  pyautoenv.bash  pyautoenv.fish  pyautoenv.plugin.zsh  pyautoenv.py  pyproject.toml  test_autopyenv.py  test_pyautoenv.py
.github/workflows/: ci.yaml  release.yaml
benches/: __init__.py  conftest.py  test_benchmarks.py  tools.py
tests/: __init__.py  test_poetry.py  test_pyautoenv.py  test_venv.py  test_version.py  tools.py
