[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyautoenv"
version = "0.1.0"
description = "Print a command to activate or deactivate a Python venv based on a directory."
authors = ["Harry Saunders <33317174+hsaunders1904@users.noreply.github.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.259"
mypy = "^1.1.1"
pre-commit = "^3.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pyfakefs = "^5.1.0"
pytest-cov = "^4.0.0"

[tool.black]
line-length = 79

[tool.coverage.report]
"exclude_lines" = ["if __name__ == .__main__.:"]
"omit" = ["test_*.py"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PGH",
  "PIE",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "PTH",
  "RET",
  "RSE",
  "S",
  "SIM",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # ignore multiline comments should start on first line
  "D212",
  # ignore one-blank line before class
  "D203",
  # ignore implicit return None
  "RET502",
]

[tool.ruff.per-file-ignores]
"test_*.py" = [
  "D",
  "ANN",
  "S101",
]
