[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyautoenv"
version = "0.6.0"
description = "Print a command to activate or deactivate a Python venv based on a directory."
authors = ["Harry Saunders <33317174+hsaunders1904@users.noreply.github.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.1.6"
mypy = "^1.10.1"
pre-commit = "^3.5.0"
types-toml = "^0.10.8.7"
yamlfmt = "^1.1.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.2"
pyfakefs = "^5.6.0"
pytest-cov = "^5.0.0"
toml = "^0.10.2"

[tool.black]
line-length = 79

[tool.coverage.report]
"exclude_lines" = ["if __name__ == .__main__.:"]
"omit" = ["test_*.py"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PGH",
  "PIE",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "RET",
  "RSE",
  "S",
  "SIM",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # ignore require typing for 'self' arguments
  "ANN101",
  # ignore require docstring for '__init__' methods
  "D107",
  # ignore multiline comments should start on first line
  "D212",
  # ignore one-blank line before class
  "D203",
  # ignore implicit return None
  "RET502",
  # allow declaring error messages inside a raise call
  "TRY003",
  # allow expecting raise of ValueError in tests
  "PT011",
]
unfixable = [
  # do not auto-remove commented out code
  "ERA001",
  # do not auto-remove unused variables
  "F841",
  # do not auto-remove unused imports
  "F401",
]

[tool.ruff.per-file-ignores]
"test_*.py" = [
  # do not require documentation for tests
  "D",
  # do not require type annotations in tests
  "ANN",
  # allow use of assert
  "S101",
]
