[project]
name = "pyautoenv"
version = "0.7.0"
description = "Print a command to activate or deactivate a Python venv based on a directory."
authors = [
  {name = "Harry Saunders", email = "33317174+hsaunders1904@users.noreply.github.com"}
]
license = "GPL-3.0-or-later"
requires-python = ">=3.9"

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "ruff>=0.11.4",
  "yamlfmt>=1.1.1",
]
test = [
  "pyfakefs>=5.8.0",
  "pytest-benchmark>=5.1.0",
  "pytest-cov>=6.1.1",
  "pytest>=8.3.5",
  "toml>=0.10.2",
]

[tool.ruff]
target-version = "py39"
line-length = 79

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
omit = ["tests/*", "benches/*"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ARG",
  "B",
  "BLE",
  "C4",
  "C90",
  "COM",
  "D",
  "DTZ",
  "E",
  "ERA",
  "EXE",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PGH",
  "PIE",
  "PL",
  "PLE",
  "PLR",
  "PLW",
  "PT",
  "RET",
  "RSE",
  "S",
  "SIM",
  "T10",
  "T20",
  "TCH",
  "TID",
  "TRY",
  "W",
  "YTT",
]
ignore = [
  # ignore require docstring for '__init__' methods
  "D107",
  # ignore multiline comments should start on first line
  "D212",
  # ignore one-blank line before class
  "D203",
  # ignore implicit return None
  "RET502",
  # allow declaring error messages inside a raise call
  "TRY003",
  # allow expecting raise of ValueError in tests
  "PT011",
  # ruff format mandates trailing commas already
  "COM812",
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
  # do not require documentation for tests
  "D",
  # do not require type annotations in tests
  "ANN",
  # allow use of assert
  "S101",
]
